--- a/styles.css
+++ b/styles.css
@@ -272,7 +272,7 @@ margin-right: 1rem;
   top: 50%;
   left: 50%;
   transform: translate(-50%,-50%);
-  background: #502419;
+  background: #8f422f;
   text-align: center;
   margin-top:3rem;
 }
@@ -444,5 +444,16 @@ width: 70%;
 .list-btn{
   font-size: 1.8rem;
   padding: 0.5rem;
+}
+input[type='checkbox'] {
+    width:30px;
+    height:30px;
+    background:white;
+    border:2px solid #555;
+    padding-right: 0.8rem;
+}
+input[type='checkbox']:checked  {
+    background: #36753b;
+    color: #36753b;
 }
 }
